chore: alteração nos nomes de arquivos

--- a/gerar.html
+++ b/gerar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
     <link rel="stylesheet" href="./estilos/gerar.css" />
-    <link href="./estilos/style.css" rel="stylesheet" />
+    <link href="./estilos/estilo.css" rel="stylesheet" />
   </head>
   <body>
     <header class="page__header">
@@ -47,6 +47,7 @@
         <h1>O que você tá pensando?</h1>
         <form action="#" class="fancy__input__wrapper">
           <input
+            name="prompt"
             class="fancy__input"
             placeholder="Uma ideia: desenhe um zumbi em cima de uma galinha"
           />
