--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
     <link rel="stylesheet" href="./estilos/sobre.css" />
-    <link href="./estilos/style.css" rel="stylesheet" />
+    <link href="./estilos/estilo.css" rel="stylesheet" />
   </head>
   <body>
     <header class="page__header">
