--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
     <link rel="stylesheet" href="./estilos/contato.css" />
-    <link href="./estilos/style.css" rel="stylesheet" />
+    <link href="./estilos/estilo.css" rel="stylesheet" />
   </head>
 
   <body>
