--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link href="estilos/style.css" rel="stylesheet" />
+    <link href="estilos/estilo.css" rel="stylesheet" />
     <link href="estilos/landing.css" rel="stylesheet" />
   </head>
   <body>
