feat: prompt na galeria

--- a/contato.html
+++ b/contato.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -30,7 +30,7 @@
               <line x1="4" x2="20" y1="6" y2="6" />
               <line x1="4" x2="20" y1="18" y2="18" />
             </svg>
-            <!-- vou fazer isso após a introdução de javascript -->
+            <!-- vou fazer isso apï¿½s a introduï¿½ï¿½o de javascript -->
           </ul>
           <ul class="header__nav__list">
             <li><a href="./index.html">Home</a></li>
