--- a/galeria.html
+++ b/galeria.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -46,13 +46,38 @@
       <section class="imgs__wrapper">
         <h1>Galeria</h1>
         <article class="imgs__grid">
-          <img src="https://picsum.photos/801" alt="Imagem placeholder" />
-          <img src="https://picsum.photos/802" alt="Imagem placeholder" />
-          <img src="https://picsum.photos/803" alt="Imagem placeholder" />
-          <img src="https://picsum.photos/804" alt="Imagem placeholder" />
-          <img src="https://picsum.photos/805" alt="Imagem placeholder" />
-          <img src="https://picsum.photos/806" alt="Imagem placeholder" />
-          <img src="https://picsum.photos/807" alt="Imagem placeholder" />
+          <div class="item">
+            <div class="image">
+              <img src="https://picsum.photos/401" alt="Imagem placeholder" />
+            </div>
+            <div class="prompt">
+              <p>Um zombie em cima de uma galinha</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="https://picsum.photos/402" alt="Imagem placeholder" />
+            </div>
+            <div class="prompt">
+              <p>Um zombie em cima de uma galinha</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="https://picsum.photos/403" alt="Imagem placeholder" />
+            </div>
+            <div class="prompt">
+              <p>Um zombie em cima de uma galinha</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="https://picsum.photos/400" alt="Imagem placeholder" />
+            </div>
+            <div class="prompt">
+              <p>Um zombie em cima de uma galinha</p>
+            </div>
+          </div>
         </article>
       </section>
     </main>
