--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -44,7 +44,12 @@
 
     <main>
       <section class="hero__landing">
-        <h1>
+        <img
+          src="https://picsum.photos/300"
+          style="border-radius: 12px"
+          alt="Foto exemplo"
+        />
+        <h1 style="margin-top: 12px">
           Transforme
           <span class="hero__landing__wght__animation">qualquer coisa</span>
           <span style="display: block">
